--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | Cart</title>
+    <title>Recipe collection | Cart</title>
 
     <link rel="stylesheet" href="/css/style.css" />
 
